Update descriptions and rearrange sections

--- a/resume.tex
+++ b/resume.tex
@@ -17,35 +17,18 @@
 \address{+44 771 966 3016 | chase@chasestevens.com}
 
 \begin{resume}
-\section{EDUCATION}
-\textbf{University of Edinburgh}: \textit{MSc.\ Artificial Intelligence} \hfill 2015 - Present\\
-Specialism in Natural Language Processing \\
-Dissertation: \textit{\href{http://www.chasestevens.com/papers/msc_dissertation.pdf}{Applying Statistical Language Modeling to Genetic Programming}}\\[5pt]
-%Anticipated graduation date: August 2016 \\[5pt]
-\textbf{University of Edinburgh}: \textit{MA Hons.\ Cognitive Science} \hfill 2011 - 2015\\
-First-class honours\\
-Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
 
-\section{SKILLS}
-\begin{itemize}[leftmargin=10pt]
-\item Code: Python, Haskell, Matlab, Java, Javascript, \CS
-\item Data: XPath, Microsoft SQL Server, MySQL
-\item IDEs: Visual Studio 2012/2013, Eclipse
-\item VCSs: Git, SVN
-\end{itemize}
-
-\section{POSITIONS HELD}
+\section{EXPERIENCE}
 \textit{Software Engineer} at \textbf{Skyscanner, Ltd.} \hfill August 2013 - Present
 \begin{itemize}[leftmargin=10pt]
-\item Maintained and developed core web scraping and deep linking frameworks and libraries
+\item Maintained and developed business-critical web scraping and deep-linking platform and associated framework, parsing over 8 GB/s of data to serve \textgreater 3000 requests/second
 \item Leveraged NLP and machine learning techniques to deliver browser-based, point-and-click tool for automatic generation of web scrapers
 \item Spearheaded and co-authored Selenium WebDriver-based browser automation and web scraper framework in Python
-\item Prototyped push-notification system and app for wearable devices
+\item Created AST-based tooling allowing real-time analysis, manipulation, generation, and automated quality assurance of code in multi-million line legacy codebase
 \end{itemize}
 \textit{Intern, Data Acquisition} at \textbf{Skyscanner, Ltd.} \hfill May 2013 - August 2013
 \begin{itemize}[leftmargin=10pt]
-\item Developed, maintained, and ensured accuracy of business-critical web scrapers
-\item Collaborated heavily with technical and non-technical staff both inside and outwith the company
+\item Developed, maintained, and ensured accuracy of revenue-driving web scrapers
 \end{itemize}
 \textit{Quality Assurance Engineer Intern} at \textbf{CashStar, Inc.} \hfill June 2011 - August 2011
 \begin{itemize}[leftmargin=10pt]
@@ -53,20 +36,37 @@ Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissert
 \item Developed custom CMS to manage client requirements and specifications
 \end{itemize}
 
-\section{CONFERENCE POSTERS}
+\section{EDUCATION}
+\textbf{University of Edinburgh}: \textit{MSc.\ Artificial Intelligence} \hfill 2015 - 2016\\
+Specialism in Natural Language Processing \\
+Dissertation: \textit{\href{http://www.chasestevens.com/papers/msc_dissertation.pdf}{Applying Statistical Language Modeling to Genetic Programming}}\\[5pt]
+\textbf{University of Edinburgh}: \textit{MA Hons.\ Cognitive Science} \hfill 2011 - 2015\\
+First-class honours\\
+Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
+
+\section{SKILLS}
+\begin{itemize}[leftmargin=10pt]
+\item Code: Python, Haskell, Matlab, Java
+\item Data: XPath, Protobuf, Hadoop, Kafka
+\item Test: Selenium WebDriver, Hypothesis, Pytest
+\item Build/Deployment: Docker, AWS, TeamCity, RPM, Ansible
+\item Tooling: PyCharm, Jupyter Notebook, Visual Studio, SVN, Git
+\end{itemize}
+
+\section{RESEARCH}
 \textbf{2015}. Stevens, H. C. \& Rohde, H. ``Modeling Referential Coordination as a Particle Swarm Optimization Task." The 19th Workshop on the Semantics and Pragmatics of Dialogue. Gothenburg, Sweden.
 
-\section{VOLUNTEER EXPERIENCE}
-\textit{Member of Board of Directors} of \textbf{The New School Corporation} \hfill 2009 - 2011
+\section{OPEN-SOURCE PROJECTS}
 \begin{itemize}[leftmargin=10pt]
-\item Ensured 501(c)(3) corporation complied with by-laws and mission statement.
-\item Analyzed and ratified school policies and budgetary proposals for The New School (Kennebunk, ME, USA)
+\item \href{https://github.com/hchasestevens/xpyth}{xpyth}: construction of XPath queries using native Python comprehension syntax
+\item \href{https://github.com/hchasestevens/astpath}{astpath}: command-line utility/library for searching Python codebases via AST queries
+\item \href{https://github.com/hchasestevens/show_ast}{showast}: Jupyter Notebook plugin for AST visualization; used in computer science curriculum at Bryn Mawr College
 \end{itemize}
 
 \section{SELECTED HONORS AND AWARDS}
 \begin{tabular}{@{}l l}
 April 2015 & \textit{Edinburgh Award} \linebreak \\[5pt]
-February 2013 & \textit{\href{http://data.inf.ed.ac.uk/ilwhack/finalprojects.php}{University of Edinburgh Smart Data Hack} ``Community App Award''}\linebreak\\[1pt] 
+February 2013 & \textit{\href{https://web.archive.org/web/20130719001143/http://data.inf.ed.ac.uk/ilwhack/finalprojects.php}{University of Edinburgh Smart Data Hack} ``Community App Award''}\linebreak\\[1pt] 
 &\textit{for \href{https://github.com/team-tusive/ilwhack}{SaferRoute} (Team Leader)} \linebreak \\[5pt]
 May 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
  &\textit{\href{http://www.chasestevens.com/team2civ/}{StratLoc}} \linebreak \\[5pt]
