--- a/resume.tex
+++ b/resume.tex
@@ -14,27 +14,32 @@
 
 \begin{document}
 \name{H.\,Chase Stevens}
-\address{+44 771 966 3016 | chase@chasestevens.com}
+%\address{150 River's Edge Drive, Apt. 327, Medford, MA 02155 | 603 312 2553 | chase@chasestevens.com}
+\address{603 312 2553 | chase@chasestevens.com}
 
 \begin{resume}
-
 \section{EXPERIENCE}
-\textit{Software Engineer} at \textbf{Skyscanner, Ltd.} \hfill August 2013 - Present
+\textit{Principal Data Science Engineer} at \textbf{Teikametrics, Inc.} \hfill July 2019 - Present \\
+\textit{Senior Data Science Engineer} at \textbf{Teikametrics, Inc.} \hfill December 2017 - July 2019
 \begin{itemize}[leftmargin=10pt]
-\item Maintained and developed business-critical web scraping and deep-linking platform and associated framework, parsing over 8 GB/s of data to serve \textgreater 3000 requests/second
-\item Leveraged NLP and machine learning techniques to deliver browser-based, point-and-click tool for automatic generation of web scrapers
-\item Spearheaded and co-authored Selenium WebDriver-based browser automation and web scraper framework in Python
-\item Created AST-based tooling allowing real-time analysis, manipulation, generation, and automated quality assurance of code in multi-million line legacy codebase
+\item Served as tech lead for 12-person Data Science group; liaised directly with clients
+\item Architected core machine learning training and serving platform atop AWS SageMaker, allowing rapid prototyping with CI/CD (see ``Conferences")
+\item Genericized and adapted existing Scala-based automated bidding technology to new advertising products, directly enabling over \$1m/yr in additional revenue
 \end{itemize}
-\textit{Intern, Data Acquisition} at \textbf{Skyscanner, Ltd.} \hfill May 2013 - August 2013
+\textit{Software Engineer} at \textbf{Curata, Inc.} \hfill April 2017 - November 2017
 \begin{itemize}[leftmargin=10pt]
-\item Developed, maintained, and ensured accuracy of revenue-driving web scrapers
+\item As part of Research and Development division, leveraged NLP, ML, and optimization techniques in ideating, prototyping, developing, and productionizing new analytics features using Jupyter Notebooks, nltk, spaCy, and d3.js.
+\item Redeveloped and improved performance of critical Python ETL systems, in one instance bringing user-facing requests from 3 minutes to under 5 seconds.
 \end{itemize}
-\textit{Quality Assurance Engineer Intern} at \textbf{CashStar, Inc.} \hfill June 2011 - August 2011
+\textit{Software Engineer} at \textbf{Skyscanner, Ltd.} \hfill May 2013 - February 2017
 \begin{itemize}[leftmargin=10pt]
-\item Ensured adherence of consumer-facing products to quality standards
-\item Developed custom CMS to manage client requirements and specifications
+\item Performed business-critical operations for Sequoia-Capital-backed startup up to and during \$1.7bn exit; produced codebase audit requisite to acquisition 
+\item Maintained and developed highly-available, service-vital web scraping and deep-linking platform and associated Python framework, parsing over 10 GB/s of data to serve more than 5000 requests/second
+\item Delivered NLP/ML-based tool for automatic point-and-click web scraper generation
+\item Proposed and authored Selenium WebDriver-based web scraper framework in Python
+\item Created AST-based tooling allowing real-time analysis, manipulation, generation, and automated quality assurance of code in multi-million line legacy Python codebase
 \end{itemize}
+
 
 \section{EDUCATION}
 \textbf{University of Edinburgh}: \textit{MSc.\ Artificial Intelligence} \hfill 2015 - 2016\\
@@ -46,32 +51,23 @@ Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissert
 
 \section{SKILLS}
 \begin{itemize}[leftmargin=10pt]
-\item Code: Python, Haskell, Matlab, Java
-\item Data: XPath, Protobuf, Hadoop, Kafka
-\item Test: Selenium WebDriver, Hypothesis, Pytest
-\item Build/Deployment: Docker, AWS, TeamCity, RPM, Ansible
-\item Tooling: PyCharm, Jupyter Notebook, Visual Studio, SVN, Git
+\item Code: Python, Scala, SQL, Haskell, Matlab
+\item Data: XPath, PostgreSQL, Snowflake, Airflow, DBT, Protobuf, Avro, Hadoop
+\item Build/Deployment: Docker, AWS, Heroku, CircleCI, RPM
 \end{itemize}
 
-\section{RESEARCH}
+\section{CONFERENCES}
+\textbf{2020}. \href{https://www.youtube.com/watch?v=8Zn4hV9xE1I}{``Painless Machine Learning in Production."} EuroPython 2020. Online. \\[5pt]
+\textbf{2018}. \href{https://www.youtube.com/watch?v=Yq3wTWkoaYY}{``Exploring the Python AST Ecosystem."} EuroPython 2018. Edinburgh, UK. \\[5pt]
 \textbf{2015}. Stevens, H. C. \& Rohde, H. ``Modeling Referential Coordination as a Particle Swarm Optimization Task." The 19th Workshop on the Semantics and Pragmatics of Dialogue. Gothenburg, Sweden.
 
 \section{OPEN-SOURCE PROJECTS}
 \begin{itemize}[leftmargin=10pt]
-\item \href{https://github.com/hchasestevens/xpyth}{xpyth}: construction of XPath queries using native Python comprehension syntax
+\item \href{https://github.com/hchasestevens/bellybutton}{bellybutton}: linting engine for Python allowing custom rulesets
 \item \href{https://github.com/hchasestevens/astpath}{astpath}: command-line utility/library for searching Python codebases via AST queries
-\item \href{https://github.com/hchasestevens/show_ast}{showast}: Jupyter Notebook plugin for AST visualization; used in computer science curriculum at Bryn Mawr College
+\item \href{https://github.com/hchasestevens/monkeys}{monkeys}: strongly-typed genetic programming framework
+\item \href{https://github.com/hchasestevens/show_ast}{showast}: Jupyter plugin for AST visualization; used in CS curriculum at Bryn Mawr
+\item \href{https://github.com/hchasestevens/hypothesis-protobuf}{hypothesis-protobuf}: property-based testing utility for Protocol Buffer messages
 \end{itemize}
-
-\section{SELECTED HONORS AND AWARDS}
-\begin{tabular}{@{}l l}
-April 2015 & \textit{Edinburgh Award} \linebreak \\[5pt]
-February 2013 & \textit{\href{https://web.archive.org/web/20130719001143/http://data.inf.ed.ac.uk/ilwhack/finalprojects.php}{University of Edinburgh Smart Data Hack} ``Community App Award''}\linebreak\\[1pt] 
-&\textit{for \href{https://github.com/team-tusive/ilwhack}{SaferRoute} (Team Leader)} \linebreak \\[5pt]
-May 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
- &\textit{\href{http://www.chasestevens.com/team2civ/}{StratLoc}} \linebreak \\[5pt]
-Spring 2011 & \textit{Class of 2011 Valedictorian, The New School, Kennebunk} \\[5pt]
-Spring 2010 & \textit{National Merit Scholar Finalist} \\[5pt]
-\end{tabular}
 \end{resume}
 \end{document}
